# trading_results_app

./: .coverage  .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: cc8a69c281f3_initial_revision.py
app/: cache_storage.py  config.py  database.py  dependencies.py  helpers.py  main.py  models.py  redis_config.py  repository.py  router.py  schemas.py
tests/: conftest.py
tests/api/: test_get_dynamics.py  test_get_last_trading_dates.py  test_get_trading_results.py
tests/fixtures/: scenarios.py  scenarios_get_last_trading_dates.py  scenarios_get_trading_results.py
